<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_attributes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/attribute"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_group_attr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_attributes">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_attributes"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:text="@string/attr_agency"
            android:textSize="16dp" />


        <RadioButton
            android:id="@+id/checkbox_region"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_agency"
            android:layout_marginStart="5dp"
            android:text="@string/attr_place"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/checkbox_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkbox_region"
            android:layout_marginStart="5dp"
            android:text="@string/attr_trip"
            android:textSize="16dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_Regions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group_attr"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Regions"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />


    <CheckBox
        android:id="@+id/checkbox_hills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:checked="true"
        android:layout_below="@id/tv_Regions"
        android:layout_marginTop="5dp"
        android:text="@string/hill"
        android:textSize="16dp" />

    <CheckBox
        android:id="@+id/checkbox_desert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desert"
        android:textSize="16dp"
        android:layout_below="@id/checkbox_hills"
        android:layout_marginStart="5dp"
        />
    <CheckBox
        android:id="@+id/checkbox_coastal_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coastalarea"
        android:textSize="16dp"
        android:layout_below="@id/checkbox_desert"
        android:layout_marginStart="5dp"
        />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/checkbox_coastal_area"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_spinner"
        android:entries="@array/willaya" />
</RelativeLayout>