<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Profile.setting.privacy.PasswordFragment">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="@dimen/marginStart"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:textStyle="bold"
            android:textColor="@color/textColor2"
            android:background="@null"
            android:layout_marginVertical="@dimen/marginVertical"
            android:layout_marginHorizontal="30dp"
            android:inputType="textPassword"/>
        <View
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/lineColor"
            android:layout_marginBottom="50dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:textStyle="bold"
            android:textColor="@color/textColor2"
            android:background="@null"
            android:layout_marginVertical="@dimen/marginVertical"
            android:layout_marginHorizontal="30dp"
            android:inputType="textPassword"/>
        <View
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/lineColor"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_password"
            android:textStyle="bold"
            android:textColor="@color/textColor2"
            android:background="@null"
            android:layout_marginVertical="@dimen/marginVertical"
            android:layout_marginHorizontal="30dp"
            android:inputType="textPassword"/>
        <View
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/lineColor"
            android:layout_marginBottom="50dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/save_changes"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/background_sign_in"/>
    </LinearLayout>

</RelativeLayout>