<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:maxHeight="300dp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="14dp"
        android:src="@drawable/accept_terms" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_terms"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/text_color"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="14dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/accept_terms_fragment_text"
        android:textColor="@color/color_secondary_light"
        android:textSize="16sp"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_accept_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_add_certification"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_sign_in"
        android:padding="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/accept_terms"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_sign_in"
        android:layout_marginTop="14dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="14dp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/continu"
        />

</LinearLayout>